# sysv_ipc_docker

./: .gitignore  VirtualAllocReader.Dockerfile  VirtualAllocWriter.Dockerfile
VirtualAllocReader/: CMakeLists.txt  main.c
VirtualAllocWriter/: CMakeLists.txt  main.c
shm_lib/include/: binary_sems.h  semun.h  shm_sysv.h
shm_lib/src/: binary_sems.c
